--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,61 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+:root {
+  --color-primary:#34C94B;
+  --color-black:#121212;
+  --color-white:#FFFFFF;
+}
+
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+}
+
+* {
+  margin: 0;
+}
+
+html,body{
+  height:100%;
+}
+
+body{
+  font-family: "Poppins",sans-serif;
+  line-height: 1.5;
+  -webkit-font-smoothing:antialiased;
+  background-color: var(--color-black);
+  color: var(--color-white);
+}
+img,
+picture,
+video,
+canvas,
+svg{
+  display: block;
+  max-width: 100%;
+}
+
+input,
+button,
+textarea,
+select{
+  font:inherit;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+  overflow-wrap: break-word;
+}
+#root,
+#__next{
+  isolation:isolate;
 }
