--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -33,7 +33,7 @@ html,body{
 }
 
 body{
-  font-family: "poppins",sans-serif;
+  font-family: "poppins";
   line-height: 1.5;
   -webkit-font-smoothing:antialiased;
   background-color: var(--color-black);
