--- a/qtify/src/components/Logo/Logo.module.css
+++ b/qtify/src/components/Logo/Logo.module.css
@@ -2,5 +2,7 @@
     width: 67px;
     height:34px;
     vertical-align: middle;
-    margin-left: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 5px;
 }
