--- a/qtify/src/index.css
+++ b/qtify/src/index.css
@@ -15,7 +15,10 @@
 }
 
 html,body{
-  height:100%;
+  /* height:100%; */
+  /* overflow:auto */
+  /* overflow: -moz-scrollbars-vertical; */
+  overflow-y: scroll;
 }
 
 body{
